==> MB3hel/AUVControlBoard/firmware/src/tinyusb/portable/samd/dcd_samd.c <==
#include "tusb_option.h"
#include "samd51g19a.h"
#include "device/dcd.h"

static void bus_reset(void)
{
  // Max size of packets is 64 bytes.
  usb_device_desc_bank_registers_t* bank_out = &sram_registers[0][TUSB_DIR_OUT];
  bank_out->USB_PCKSIZE = (bank_out->USB_PCKSIZE & ~USB_DEVICE_PCKSIZE_SIZE_Msk) | USB_DEVICE_PCKSIZE_SIZE(3);
  usb_device_desc_bank_registers_t* bank_in = &sram_registers[0][TUSB_DIR_IN];
  bank_in->USB_PCKSIZE = (bank_out->USB_PCKSIZE & ~USB_DEVICE_PCKSIZE_SIZE_Msk) | USB_DEVICE_PCKSIZE_SIZE(3);

  usb_device_endpoint_registers_t* ep = &USB_REGS->DEVICE.DEVICE_ENDPOINT[0];
  ep->USB_EPCFG = USB_DEVICE_EPCFG_EPTYPE0(0x1) | USB_DEVICE_EPCFG_EPTYPE1(0x1);
  ep->USB_EPINTENSET = USB_DEVICE_EPINTENSET_TRCPT0(1) | USB_DEVICE_EPINTENSET_TRCPT1(1) | USB_DEVICE_EPINTENSET_RXSTP(1);

  // Prepare for setup packet
  prepare_setup();
}

void dcd_set_address (uint8_t rhport, uint8_t dev_addr)
{
  (void) dev_addr;

  // Response with zlp status
  dcd_edpt_xfer(rhport, 0x80, NULL, 0);

  // DCD can only set address after status for this request is complete
  // do it at dcd_edpt0_status_complete()

  // Enable SUSPEND interrupt since the bus signal D+/D- are stable now.
  USB_REGS->DEVICE.USB_INTFLAG = USB_DEVICE_INTENCLR_SUSPEND(1); // clear pending
  USB_REGS->DEVICE.USB_INTENSET = USB_DEVICE_INTENSET_SUSPEND(1);
}

void dcd_remote_wakeup(uint8_t rhport)
{
  (void) rhport;
  USB_REGS->DEVICE.USB_CTRLB |= USB_DEVICE_CTRLB_UPRSM_Msk;
}

void dcd_disconnect(uint8_t rhport)
{
  (void) rhport;
  USB_REGS->DEVICE.USB_CTRLB |= USB_DEVICE_CTRLB_DETACH(1);
}

void dcd_connect(uint8_t rhport)
{
  (void) rhport;
   USB_REGS->DEVICE.USB_CTRLB &= ~USB_DEVICE_CTRLB_DETACH(1);
}

bool dcd_edpt_open (uint8_t rhport, tusb_desc_endpoint_t const * desc_edpt)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(desc_edpt->bEndpointAddress);
  uint8_t const dir   = tu_edpt_dir(desc_edpt->bEndpointAddress);

  usb_device_desc_bank_registers_t* bank = &sram_registers[epnum][dir];
  uint32_t size_value = 0;
  while (size_value < 7) {
    if (1 << (size_value + 3) == tu_edpt_packet_size(desc_edpt)) {
      break;
    }
    size_value++;
  }

  // unsupported endpoint size
  if ( size_value == 7 && tu_edpt_packet_size(desc_edpt) != 1023 ) return false;

  bank->USB_PCKSIZE = (bank->USB_PCKSIZE & ~USB_DEVICE_PCKSIZE_SIZE_Msk) | USB_DEVICE_PCKSIZE_SIZE(size_value);

  usb_device_endpoint_registers_t* ep = &USB_REGS->DEVICE.DEVICE_ENDPOINT[epnum];

  if ( dir == TUSB_DIR_OUT )
  {
    ep->USB_EPCFG = (ep->USB_EPCFG & ~USB_DEVICE_EPCFG_EPTYPE0_Msk) | USB_DEVICE_EPCFG_EPTYPE0(desc_edpt->bmAttributes.xfer + 1);
    ep->USB_EPSTATUSCLR = USB_DEVICE_EPSTATUSCLR_STALLRQ0(1) | USB_DEVICE_EPSTATUSCLR_DTGLOUT(1); // clear stall & dtoggle
    ep->USB_EPINTENSET |= USB_DEVICE_EPINTENSET_TRCPT0_Msk;
  }else
  {
    ep->USB_EPCFG = (ep->USB_EPCFG & ~USB_DEVICE_EPCFG_EPTYPE1_Msk) | USB_DEVICE_EPCFG_EPTYPE1(desc_edpt->bmAttributes.xfer + 1);
    ep->USB_EPSTATUSCLR = USB_DEVICE_EPSTATUSCLR_STALLRQ1(1) | USB_DEVICE_EPSTATUSCLR_DTGLIN(1); // clear stall & dtoggle
    ep->USB_EPINTENSET |= USB_DEVICE_EPINTENSET_TRCPT1_Msk;
  }

  return true;
}

bool dcd_edpt_xfer (uint8_t rhport, uint8_t ep_addr, uint8_t * buffer, uint16_t total_bytes)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  uint8_t const dir   = tu_edpt_dir(ep_addr);

  usb_device_desc_bank_registers_t* bank = &sram_registers[epnum][dir];
  usb_device_endpoint_registers_t* ep = &USB_REGS->DEVICE.DEVICE_ENDPOINT[epnum];

  bank->USB_ADDR = (uint32_t) buffer;

  // A SETUP token can occur immediately after an ZLP Status.
  // So make sure we have a valid buffer for setup packet.
  //   Status = ZLP EP0 with direction opposite to one in the dir bit of current setup
  if ( (epnum == 0) && (buffer == NULL) && (total_bytes == 0) && (dir != tu_edpt_dir(_setup_packet[0])) ) {
    prepare_setup();
  }

  if ( dir == TUSB_DIR_OUT )
  {
    bank->USB_PCKSIZE = (bank->USB_PCKSIZE & ~USB_DEVICE_PCKSIZE_MULTI_PACKET_SIZE_Msk) | USB_DEVICE_PCKSIZE_MULTI_PACKET_SIZE(total_bytes);
    bank->USB_PCKSIZE = (bank->USB_PCKSIZE & ~USB_DEVICE_PCKSIZE_BYTE_COUNT_Msk) | USB_DEVICE_PCKSIZE_BYTE_COUNT(0);
    ep->USB_EPSTATUSCLR = USB_DEVICE_EPSTATUSCLR_BK0RDY(1);
    ep->USB_EPINTFLAG = USB_DEVICE_EPINTFLAG_TRFAIL0(1);
  } else
  {
    bank->USB_PCKSIZE = (bank->USB_PCKSIZE & ~USB_DEVICE_PCKSIZE_MULTI_PACKET_SIZE_Msk) | USB_DEVICE_PCKSIZE_MULTI_PACKET_SIZE(0);
    bank->USB_PCKSIZE = (bank->USB_PCKSIZE & ~USB_DEVICE_PCKSIZE_BYTE_COUNT_Msk) | USB_DEVICE_PCKSIZE_BYTE_COUNT(total_bytes);
    ep->USB_EPSTATUSSET = USB_DEVICE_EPSTATUSSET_BK1RDY(1);
    ep->USB_EPINTFLAG = USB_DEVICE_EPINTFLAG_TRFAIL1(1);
  }

  return true;
}

void dcd_edpt_stall (uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  usb_device_endpoint_registers_t* ep = &USB_REGS->DEVICE.DEVICE_ENDPOINT[epnum];

  if (tu_edpt_dir(ep_addr) == TUSB_DIR_IN) {
    ep->USB_EPSTATUSSET = USB_DEVICE_EPSTATUSSET_STALLRQ1(1);
  } else {
    ep->USB_EPSTATUSSET = USB_DEVICE_EPSTATUSSET_STALLRQ0(1);
  }
}

void dcd_edpt_clear_stall (uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  usb_device_endpoint_registers_t* ep = &USB_REGS->DEVICE.DEVICE_ENDPOINT[epnum];

  if (tu_edpt_dir(ep_addr) == TUSB_DIR_IN) {
    ep->USB_EPSTATUSCLR = USB_DEVICE_EPSTATUSCLR_STALLRQ1(1) | USB_DEVICE_EPSTATUSCLR_DTGLIN(1);
  } else {
    ep->USB_EPSTATUSCLR = USB_DEVICE_EPSTATUSCLR_STALLRQ0(1) | USB_DEVICE_EPSTATUSCLR_DTGLOUT(1);
  }
}

void dcd_int_handler (uint8_t rhport)
{
  (void) rhport;

  uint32_t int_status = USB_REGS->DEVICE.USB_INTFLAG & USB_REGS->DEVICE.USB_INTENSET;

  // Start of Frame
  if ( int_status & USB_DEVICE_INTFLAG_SOF_Msk )
  {
    USB_REGS->DEVICE.USB_INTFLAG = USB_DEVICE_INTFLAG_SOF_Msk;
    dcd_event_bus_signal(0, DCD_EVENT_SOF, true);
  }

  // SAMD doesn't distinguish between Suspend and Disconnect state.
  // Both condition will cause SUSPEND interrupt triggered.
  // To prevent being triggered when D+/D- are not stable, SUSPEND interrupt is only
  // enabled when we received SET_ADDRESS request and cleared on Bus Reset
  if ( int_status & USB_DEVICE_INTFLAG_SUSPEND_Msk )
  {
    USB_REGS->DEVICE.USB_INTFLAG = USB_DEVICE_INTFLAG_SUSPEND_Msk;

    // Enable wakeup interrupt
    USB_REGS->DEVICE.USB_INTFLAG = USB_DEVICE_INTFLAG_WAKEUP_Msk; // clear pending
    USB_REGS->DEVICE.USB_INTENSET = USB_DEVICE_INTFLAG_WAKEUP_Msk;

    dcd_event_bus_signal(0, DCD_EVENT_SUSPEND, true);
  }

  // Wakeup interrupt is only enabled when we got suspended.
  // Wakeup interrupt will disable itself
  if ( int_status & USB_DEVICE_INTFLAG_WAKEUP_Msk )
  {
    USB_REGS->DEVICE.USB_INTFLAG = USB_DEVICE_INTFLAG_WAKEUP_Msk;

    // disable wakeup interrupt itself
    USB_REGS->DEVICE.USB_INTENCLR = USB_DEVICE_INTFLAG_WAKEUP_Msk;
    dcd_event_bus_signal(0, DCD_EVENT_RESUME, true);
  }

  // Enable of Reset
  if ( int_status & USB_DEVICE_INTFLAG_EORST_Msk )
  {
    USB_REGS->DEVICE.USB_INTFLAG = USB_DEVICE_INTFLAG_EORST_Msk;

    // Disable both suspend and wakeup interrupt
    USB_REGS->DEVICE.USB_INTENCLR = USB_DEVICE_INTFLAG_WAKEUP_Msk | USB_DEVICE_INTFLAG_SUSPEND_Msk;

    bus_reset();
    dcd_event_bus_reset(0, TUSB_SPEED_FULL, true);
  }

  // Handle SETUP packet
  if (USB_REGS->DEVICE.DEVICE_ENDPOINT[0].USB_EPINTFLAG & USB_DEVICE_EPINTFLAG_RXSTP_Msk)
  {
    // This copies the data elsewhere so we can reuse the buffer.
    dcd_event_setup_received(0, _setup_packet, true);

    // Although Setup packet only set RXSTP bit,
    // TRCPT0 bit could already be set by previous ZLP OUT Status (not handled until now).
    // Since control status complete event is optional, we can just clear TRCPT0 and skip the status event
    USB_REGS->DEVICE.DEVICE_ENDPOINT[0].USB_EPINTFLAG = USB_DEVICE_EPINTFLAG_RXSTP(1) | USB_DEVICE_EPINTFLAG_TRCPT0(1);
  }

  // Handle complete transfer
  maybe_transfer_complete();
}
